Fixed featured image scaling / distortion.

--- a/css/home.css
+++ b/css/home.css
@@ -12,6 +12,8 @@ h4.featuredTitle {
 }
 
 img.featuredImg {
+    margin: auto;
+    object-fit: contain;
     border-radius: 5%;
     filter: drop-shadow(5px 5px 4px #a8a8a8);
 }
@@ -22,9 +24,9 @@ img.featuredImg {
     width: auto;
     max-width: 100%;
     max-height: 100%;
-    padding-top: 1em;
-    padding-bottom: 1em;
-    margin: 1.5em !important;
+    padding-top: .5em;
+    padding-bottom: .5em;
+    margin: .5em !important;
 }
 
 @media (min-width: 991px) {
